--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -21,6 +21,7 @@
     <properties>
         <java.version>17</java.version>
         <jjwt.version>0.12.3</jjwt.version>
+        <flyway.version>9.22.3</flyway.version>
     </properties>
     
     <dependencies>
@@ -58,6 +59,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-database-postgresql</artifactId>
+            <version>${flyway.version}</version>
             <scope>runtime</scope>
         </dependency>
         
