fix: use docker compose v2 syntax instead of docker-compose
- Change 'docker-compose config' to 'docker compose config'
- GitHub Actions runners use Docker Compose v2 (integrated with Docker CLI)
- Fixes 'docker-compose: command not found' error in Docker Build job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,4 +111,4 @@ jobs:
       run: docker build -t ged-backend:latest .
     
     - name: Test Docker Compose
-      run: docker-compose config
+      run: docker compose config
